# hk-backend

./: .gitignore  .golangci.yml  Cargo.toml  Makefile.toml  README.md  go.mod  go.sum
candleconv/: convert_resolution.go  convert_resolution_test.go
cmd/csvtodb/: csvtodb.go
config/: config.go  dbconfig.go  dbconfig_test.go  local.yml
datafeed/: csv_loader.go  datafeed.go  forex_bar_csv.go  forex_datafeed.go
db/dbconfig/: dbconfig.go
db/dbstore/: inf.go
db/dbstoresql/: db_utils_test.go  dbstoresql.go  forex_candles.go  forex_candles_integ_test.go
db/migrations/: sqitch.plan
economy_core/: Cargo.toml
economy_core/src/: enums.rs  errors.rs  lib.rs  ohlc.rs  traits.rs
economy_core/tests/: ohlc_replay_test.rs
errors/: error.go
infra/: docker-compose.yaml
logutils/: phuslu_log.go
market_data/: Cargo.toml
market_data/scripts/: setup_initial_database.rs
market_data/src/: lib.rs
market_data/src/csv_parser/: mod.rs  ohlc_csv_parser.rs  traits.rs
market_data/src/ohlc_replay/: fake_ohlc_replay.rs  mod.rs
migrations/: README.md  sqitch.conf  sqitch.plan  start_database
migrations/2023-09-28-002338_exchange_asset_ohlc_setup/: down.sql  up.sql
migrations/deploy/: add_chart_resolution_enum.sql  add_symbol_info.sql  symbol_info.sql
migrations/revert/: add_forex_candles.sql  (+2 more)
models/: candle.go  datafeed.go  datafeed_test.go  exchange.go  history_metadata.go  resolution.go  resolution_test.go  symbol.go  symbol_type.go  time_range.go
openapi/: trading.yaml
symbols/: inf.go  symbol_manager.go
timeutils/: time_block.go  time_block_test.go
(+51 files in other folders)
